Fix EMoCBot wrong dialogue after page load, add spacer to bottom so footer isn't hidden on small screens

--- a/src/Components/EMoCBot/EMoCBot.module.scss
+++ b/src/Components/EMoCBot/EMoCBot.module.scss
@@ -82,3 +82,7 @@
   @include flex-column;
   background-color: var(--col-bg-dark);
 }
+
+.bottomSpace {
+  background-color: var(--col-bg-light);
+}
